# command/endpoints.py
@@ -3,7 +3,7 @@ from auth.core import permission
 from command.data_access import *
 
 
-def get_command(**kwargs):
+def send_command(**kwargs):
     permission(kwargs['token_info'], access_role='basic')
     data = kwargs['body']
     CommandDacc.command(data['command'])
