# connect/endpoints.py
@@ -2,7 +2,7 @@ from connect.data_access import *
 from auth.core import permission
 
 
-def get_connection(**kwargs: dict):
+def make_connection(**kwargs: dict):
     permission(kwargs['token_info'], access_role='basic')
     data = kwargs['body']
     # print(data)
