# openapi.yaml
@@ -34,7 +34,7 @@ paths:
           authorisation-required, 401
           not-found, 404
 
-      operationId: connect.endpoints.get_connection
+      operationId: connect.endpoints.make_connection
       requestBody:
         description: Connection Data
         content:
@@ -72,7 +72,7 @@ paths:
           authorisation-required, 401
           not-found, 404
 
-      operationId: command.endpoints.get_command
+      operationId: command.endpoints.send_command
       requestBody:
         description: Command Data
         content:
